--- a/pagina1.html
+++ b/pagina1.html
@@ -9,6 +9,7 @@
     <form action="">
         <h4>Nome:</h4> <input type="text" name:"nome" id="nome">
         <h4>Sobrenome:</h4> <input type="text" name:"sobrenome" id="sobrenome">
+        <h4>Senha:</h4> <input type="text" name:"senha" id="senha">
         <br><br>
         <input type="submit" value="Salvar">
     </form>
